feat: convert book view to table with paging, remove book cover, implement edit book